--- a/root_serve_dir/cytoscape-fixed.html
+++ b/root_serve_dir/cytoscape-fixed.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="css/graph-cytoscape.css"/>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
+  <script src="js/cytoscape.min.js"></script>
   <!--<script
       src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/arbor.js"></script>-->
   <script src="js/arbor.js"></script>
