--- a/root_serve/cytoscape.html
+++ b/root_serve/cytoscape.html
@@ -10,7 +10,7 @@
   <script src="js/arbor.js"></script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   
-  <script src="js/graph-cytoscape.js"></script>
+  <script src="js/cytoscape.js"></script>
   </head>
   <body>
     <h1>Graph Visualizer</h1>
